// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render an expense summary for 3 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $3.00
  </h1>
</div>
`;

exports[`should correctly render summary for 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $5.00
  </h1>
</div>
`;
